[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/tiles/desert.tres" type="TileSet" id=1]
[ext_resource path="res://resources/tiles/dirt_on_ground.tres" type="TileSet" id=2]
[ext_resource path="res://level/level.gd" type="Script" id=3]
[ext_resource path="res://resources/tiles/gras_on_ground.tres" type="TileSet" id=4]
[ext_resource path="res://flora/tree.tscn" type="PackedScene" id=5]

[node name="level" type="Node2D"]
script = ExtResource( 3 )

[node name="desert_layer" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 0, 0, 65537, 0, 1, 65538, 0, 1, 65539, 0, 1, 65540, 0, 2, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 131079, 131077, 0, 1, 131078, 0, 1, 131079, 0, 2, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65538, 262144, 0, 131072, 262145, 0, 131073, 262146, 0, 131073, 262147, 0, 9, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 131079, 262152, 0, 1, 262153, 0, 1, 262154, 0, 1, 262155, 0, 1, 262156, 0, 2, 327683, 0, 131072, 327684, 0, 9, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 131079, 327693, 0, 1, 327694, 0, 1, 327695, 0, 1, 327696, 0, 1, 327697, 0, 1, 327698, 0, 1, 327699, 0, 1, 327700, 0, 1, 327701, 0, 1, 327702, 0, 1, 327703, 0, 1, 327704, 0, 1, 327705, 0, 1, 327706, 0, 2, 393220, 0, 131072, 393221, 0, 131073, 393222, 0, 9, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 131079, 393243, 0, 1, 393244, 0, 2, 458758, 0, 131072, 458759, 0, 131073, 458760, 0, 131073, 458761, 0, 131073, 458762, 0, 9, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65537, 458776, 0, 65537, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65537, 458780, 0, 131079, 458781, 0, 2, 524298, 0, 131072, 524299, 0, 131073, 524300, 0, 131073, 524301, 0, 131073, 524302, 0, 131073, 524303, 0, 131073, 524304, 0, 131073, 524305, 0, 9, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65537, 524312, 0, 65537, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 7, 524317, 0, 262150, 524318, 0, 196610, 589841, 0, 131072, 589842, 0, 131073, 589843, 0, 131073, 589844, 0, 131073, 589845, 0, 131073, 589846, 0, 131073, 589847, 0, 131073, 589848, 0, 131073, 589849, 0, 131073, 589850, 0, 131073, 589851, 0, 131073, 589852, 0, 131074 )

[node name="gras_layer" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="dirt_layer" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="trees" type="Node2D" parent="."]

[node name="tree" parent="trees" instance=ExtResource( 5 )]
position = Vector2( 16, 32 )
growth_stage = 3

[node name="tree2" parent="trees" instance=ExtResource( 5 )]
position = Vector2( 32, 32 )
growth_stage = 3

[node name="tree3" parent="trees" instance=ExtResource( 5 )]
position = Vector2( 89.5774, 63.434 )
growth_stage = 3

[node name="tree4" parent="trees" instance=ExtResource( 5 )]
position = Vector2( 16, 48 )
growth_stage = 3

[node name="tree5" parent="trees" instance=ExtResource( 5 )]
position = Vector2( 143.818, 88.5685 )
growth_stage = 3
